--- a/turmas/2022.1.md
+++ b/turmas/2022.1.md
@@ -2,3 +2,4 @@
 ## Turmas 2022.1 
 
 * [Notas da Turma A](https://docs.google.com/spreadsheets/d/e/2PACX-1vQXRNegL5rtznFDyO-X10VLd9kSKcc8uZ6tQ11ROK02y6C2WPpquA9uKya3OLZJM3ekrFedF4JtYJzU/pubhtml?gid=1006821734&single=true)
+* [Notas da Turma B](https://docs.google.com/spreadsheets/d/e/2PACX-1vQXRNegL5rtznFDyO-X10VLd9kSKcc8uZ6tQ11ROK02y6C2WPpquA9uKya3OLZJM3ekrFedF4JtYJzU/pubhtml?gid=913572818&single=true)
